--- a/src/AppBundle/Resources/views/Produit/list.html.twig
+++ b/src/AppBundle/Resources/views/Produit/list.html.twig
@@ -9,6 +9,7 @@
                 <th>Description</th>
                 <th>Prix</th>
                 <th>Stock</th>
+                <th></th>
             </tr>
         </thead>
     </table>
@@ -25,7 +26,7 @@
                 "paging": true,
                 "info": false,
                 "ajax": {
-                    "url": '{{ path('_challenge_get_produits') }}',
+                    "url": Routing.generate('_challenge_get_produits'),
                     "type": "POST"
                 },
                 order: [],
@@ -36,9 +37,20 @@
                     {"data": "titre"},
                     {"data": "description"},
                     {"data": "prix"},
-                    {"data": "stock"}
+                    {"data": "stock"},
+                    {
+                        "targets": 0,
+                        "searchable": false,
+                        "orderable": false,
+                        "render": function(data, type, row){
+                            return '<a href="#" class="updateProduit" data-id="'+row.id+'">Modifier</a>';
+                        }}
                 ]
             });
-        })
+        });
+
+        $(document).on('click', '.updateProduit', function(){
+            location.href = Routing.generate('_challenge_produit_update', {'id': $(this).data('id')});
+        });
     </script>
 {% endblock %}
