--- a/src/AppBundle/Resources/views/Produit/list.html.twig
+++ b/src/AppBundle/Resources/views/Produit/list.html.twig
@@ -15,6 +15,8 @@
             </tr>
         </thead>
     </table>
+
+    <button id="addNewProduit">Nouveau produit</button>
 {% endblock %}
 
 {% block javascripts %}
@@ -76,5 +78,9 @@
                 }
             });
         });
+
+        $('#addNewProduit').on('click', function(){
+            location.href = Routing.generate('_challenge_produit_add');
+        })
     </script>
 {% endblock %}
