--- a/src/AppBundle/Resources/views/Flux/create.html.twig
+++ b/src/AppBundle/Resources/views/Flux/create.html.twig
@@ -1,16 +1,31 @@
+{% set fluxType = type=="e" ? 'entrée' : 'sortie' %}
+{% if app.request.get('_route') == '_challenge_update_flux' %}
+    {% set titre = 'Modification ' ~ fluxType %}
+{% else %}
+    {% set titre = 'Création ' ~ fluxType %}
+{% endif %}
+
 {% extends '::base.html.twig' %}
-{% block title %}{% if app.request.get('_route') == '_challenge_frs_add' %}Ajout Fournisseur{% else %}Modification Fournisseur{% endif %}{% endblock %}
+{% block title %}{{ titre }}{% endblock %}
 {% block body %}
-    <h1>
-        {% if app.request.get('_route') == '_challenge_frs_add' %}
-            Nouveau Fournisseur
-        {% else %}
-            Modification Fournisseur
-        {% endif %}
-    </h1>
+    <h1>{{ titre }}</h1>
     {{ form_start(form) }}
-    <div>{{ form_label(form.nomFournisseur) }} : {{ form_widget(form.nomFournisseur) }}
-        <p>{{ form_errors(form.nomFournisseur) }}</p>
+    <div>{{ form_label(form.date) }} : {{ form_widget(form.date) }}
+        <p>{{ form_errors(form.date) }}</p>
+    </div>
+    <div>{{ form_label(form.qte) }} : {{ form_widget(form.qte) }}
+        <p>{{ form_errors(form.qte) }}</p>
     </div>
     {{ form_end(form) }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        $('#flux_date').datepicker({
+            language: 'fr-FR',
+            todayHighlight: true,
+            autoclose: true
+        });
+    </script>
 {% endblock %}
