--- a/src/FrontBundle/Resources/views/Produit/fiche.html.twig
+++ b/src/FrontBundle/Resources/views/Produit/fiche.html.twig
@@ -1,7 +1,8 @@
-{% extends '::base.html.twig' %}
+{% extends 'FrontBundle::front_layout.html.twig' %}
 {% block title %}Fiche Produit{% endblock %}
 
 {% block body %}
+    {{ parent() }}
     <div>
         <h3 id="titre">{{ produit.titre }}</h3>
     </div>
@@ -19,49 +20,4 @@
     </div>
     <input type="hidden" id="produitId" value="{{ produit.id }}">
     <div class="btn btn-primary" id="panier">Ajouter au pannier</div>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script>
-        $(document).ready(function () {
-            var produitId = $('#produitId').val();
-            var produitCommand = localStorage.getItem('command') !== null ? localStorage.getItem('command') : "{}";
-            produitCommand = JSON.parse(produitCommand);
-            if (produitCommand['prod'+produitId] !== undefined) {
-                $('#nbCommand').val(produitCommand['prod'+produitId].quantite);
-            }
-        });
-        $('#panier').on('click', function () {
-            var produitId = $('#produitId').val();
-            var produitCommand = localStorage.getItem('command') !== null ? localStorage.getItem('command') : "{}";
-            produitCommand = JSON.parse(produitCommand);
-            if (produitCommand['prod'+produitId] === undefined) {
-                produitCommand['prod'+produitId] = {
-                    'description': $('#description').text(),
-                    'prix': $('#prix').text(),
-                    'quantite': $('#nbCommand').val()
-                };
-            } else {
-                produitCommand['prod'+produitId].quantite = $('#nbCommand').val();
-            }
-
-            localStorage.setItem('command', JSON.stringify(produitCommand));
-            calcSomme();
-        });
-
-        function calcSomme(){
-            var command = localStorage.getItem('command');
-            var total = 0;
-
-            if (command !== null) {
-                command = JSON.parse(command);
-                $.each(command, function (index ,c) {
-                    total += c.quantite * c.prix;
-                });
-            }
-
-            localStorage.setItem('total', total);
-        }
-    </script>
 {% endblock %}
