--- a/src/FrontBundle/Resources/views/Produit/list.html.twig
+++ b/src/FrontBundle/Resources/views/Produit/list.html.twig
@@ -1,6 +1,7 @@
-{% extends '::base.html.twig' %}
+{% extends 'FrontBundle::front_layout.html.twig' %}
 {% block title %}Produits disponibles{% endblock %}
 {% block body %}
+    {{ parent() }}
     <h1>Produits disponibles</h1>
     <div id="message-bloc" style="display: none"></div>
     <table id="list-produit">
@@ -13,69 +14,4 @@
             </tr>
         </thead>
     </table>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    <script>
-        $(document).ready(function(){
-            $('#list-produit').DataTable({
-                "processing": true,
-                "serverSide": false,
-                "searching": true,
-                "paging": true,
-                "info": false,
-                "ajax": {
-                    "url": Routing.generate('_challenge_get_produits'),
-                    "type": "POST"
-                },
-                order: [],
-                "pageLength": 10,
-                "bLengthChange": false,
-                "autoWidth": false,
-                "columns": [
-                    {"data": "titre"},
-                    {"data": "description"},
-                    {"data": "prix"},
-                    {
-                        "targets": 0,
-                        "searchable": false,
-                        "orderable": false,
-                        "render": function(data, type, row){
-                            return '<a href="#" class="voirFiche" data-id="'+row.id+'">Voir fiche</a>';
-                        }
-                    }
-                ]
-            });
-        });
-
-        $(document).on('click', '.voirFiche', function(){
-            location.href = Routing.generate('_challenge_front_fiche_produit', {'id': $(this).data('id')});
-        });
-
-        $(document).on('click', '.removeProduit', function(){
-            $.ajax({
-                url: Routing.generate('_challenge_remove_product', {'id': $(this).data('id')}),
-                success: function(_resp) {
-                    $('#message-bloc').text(_resp.message);
-                    $('#message-bloc').show();
-                    if (_resp.success) {
-                        $('#list-produit').DataTable().ajax.reload();
-                    }
-                }
-            });
-        });
-
-        $('#addNewProduit').on('click', function(){
-            location.href = Routing.generate('_challenge_produit_add');
-        });
-
-        $(document).on('click', '.entree', function(){
-            location.href = Routing.generate('_challenge_produit_flux', {'id': $(this).data('id'), 'type': 'e'})
-        });
-
-        $(document).on('click', '.sortie', function(){
-            location.href = Routing.generate('_challenge_produit_flux', {'id': $(this).data('id'), 'type': 's'})
-        });
-    </script>
 {% endblock %}
