--- a/src/FrontBundle/Resources/views/Produit/panier.html.twig
+++ b/src/FrontBundle/Resources/views/Produit/panier.html.twig
@@ -7,8 +7,9 @@
         <tr>
             <th>Titre</th>
             <th>Description</th>
-            <th>Prix</th>
+            <th>Prix Unitaire</th>
             <th>Quantité</th>
+            <th>Total</th>
             <th style="width: 5%"></th>
             <th style="width: 5%"></th>
         </tr>
