--- a/src/FrontBundle/Resources/views/Produit/panier.html.twig
+++ b/src/FrontBundle/Resources/views/Produit/panier.html.twig
@@ -1,5 +1,6 @@
 {% extends 'FrontBundle::front_layout.html.twig' %}
 
+{% block title %}Votre panier{% endblock %}
 {% block body %}
     <h1>Votre panier</h1>
     <table id="panier-list">
