Création Commande Form

--- a/src/FrontBundle/Resources/views/Produit/panier.html.twig
+++ b/src/FrontBundle/Resources/views/Produit/panier.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Votre panier{% endblock %}
 {% block body %}
     <h1>Votre panier</h1>
+    {{ form_start(form) }}
     <table id="panier-list">
         <thead>
         <tr>
@@ -20,5 +21,6 @@
     <div class="well" id="totalBloc" style="display: none">
         <label>Total</label> : <span id="total"></span>
     </div>
-    <div class="btn btn-success btn-sm" id="confirmCommand"><i class="fa fa-save"></i> Confirmer la commande</div>
+    <button type="submit" class="btn btn-success btn-sm" id="confirmCommand"><i class="fa fa-save"></i> Confirmer la commande</button>
+    {{ form_end(form) }}
 {% endblock %}
