--- a/src/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register.html.twig
@@ -26,6 +26,26 @@
                         {{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
                         <div class="help-block with-errors">{{ form_errors(form.email) }}</div>
                     </div>
+                    <div class="form-group {{ form.nom.vars.errors|length > 0 ? ' has-error' : '' }}">
+                        {{ form_label(form.nom) }} :
+                        {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+                        <div class="help-block with-errors">{{ form_errors(form.nom) }}</div>
+                    </div>
+                    <div class="form-group {{ form.prenom.vars.errors|length > 0 ? ' has-error' : '' }}">
+                        {{ form_label(form.prenom) }} :
+                        {{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
+                        <div class="help-block with-errors">{{ form_errors(form.prenom) }}</div>
+                    </div>
+                    <div class="form-group {{ form.adresse.vars.errors|length > 0 ? ' has-error' : '' }}">
+                        {{ form_label(form.adresse) }} :
+                        {{ form_widget(form.adresse, {'attr': {'class': 'form-control'}}) }}
+                        <div class="help-block with-errors">{{ form_errors(form.adresse) }}</div>
+                    </div>
+                    <div class="form-group {{ form.telephone.vars.errors|length > 0 ? ' has-error' : '' }}">
+                        {{ form_label(form.telephone) }} :
+                        {{ form_widget(form.telephone, {'attr': {'class': 'form-control'}}) }}
+                        <div class="help-block with-errors">{{ form_errors(form.telephone) }}</div>
+                    </div>
                     <div class="form-group {{ form.plainPassword.first.vars.errors|length > 0 ? ' has-error' : '' }}">
                         {{ form_label(form.plainPassword.first) }} :
                         {{ form_widget(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
