--- a/src/AppBundle/Resources/views/Fournisseur/list.html.twig
+++ b/src/AppBundle/Resources/views/Fournisseur/list.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::back_layout.html.twig' %}
 {% block title %}Liste fournisseurs{% endblock %}
 {% block body %}
     <h1>Liste des fournisseurs</h1>
