--- a/src/AppBundle/Resources/views/Produit/list.html.twig
+++ b/src/AppBundle/Resources/views/Produit/list.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppBundle::back_layout.html.twig' %}
 {% block title %}Liste produit{% endblock %}
 {% block body %}
     <h1>Liste des produits</h1>
