--- a/src/AppBundle/Resources/views/back_layout.html.twig
+++ b/src/AppBundle/Resources/views/back_layout.html.twig
@@ -35,7 +35,7 @@
             <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
         </div>#}
         <!--logo start-->
-        <a href="" class="logo"><b>Challenge</b></a>
+        <a href="{{ path('_challenge_front_produit_list') }}" class="logo"><b>Challenge</b></a>
         <!--logo end-->
         <div class="top-menu">
             <ul class="nav pull-right top-menu">
@@ -52,83 +52,30 @@
     <aside>
         <div id="sidebar"  class="nav-collapse ">
             <!-- sidebar menu start-->
-            {#<ul class="sidebar-menu" id="nav-accordion">
-
-                <p class="centered"><a href="profile.html"><img src="assets/img/ui-sam.jpg" class="img-circle" width="60"></a></p>
-                <h5 class="centered">Marcel Newman</h5>
-
-                <li class="mt">
-                    <a href="index.html">
-                        <i class="fa fa-dashboard"></i>
-                        <span>Dashboard</span>
-                    </a>
-                </li>
+            <ul class="sidebar-menu" id="nav-accordion">
 
                 <li class="sub-menu">
                     <a href="javascript:;" >
                         <i class="fa fa-desktop"></i>
-                        <span>UI Elements</span>
+                        <span>Produits</span>
                     </a>
                     <ul class="sub">
-                        <li><a  href="general.html">General</a></li>
-                        <li><a  href="buttons.html">Buttons</a></li>
-                        <li><a  href="panels.html">Panels</a></li>
+                        <li><a href="{{ path('_challenge_produit_list') }}">Liste</a></li>
+                        <li><a href="{{ path('_challenge_produit_add') }}">Nouveau</a></li>
                     </ul>
                 </li>
 
                 <li class="sub-menu">
                     <a href="javascript:;" >
                         <i class="fa fa-cogs"></i>
-                        <span>Components</span>
+                        <span>Fournisseur</span>
                     </a>
                     <ul class="sub">
-                        <li><a  href="calendar.html">Calendar</a></li>
-                        <li><a  href="gallery.html">Gallery</a></li>
-                        <li><a  href="todo_list.html">Todo List</a></li>
+                        <li><a  href="{{ path('_challenge_fournisseur_list') }}">Liste</a></li>
+                        <li><a  href="{{ path('_challenge_frs_add') }}">Nouveau</a></li>
                     </ul>
                 </li>
-                <li class="sub-menu">
-                    <a class="active" href="javascript:;" >
-                        <i class="fa fa-book"></i>
-                        <span>Extra Pages</span>
-                    </a>
-                    <ul class="sub">
-                        <li class="active"><a  href="blank.html">Blank Page</a></li>
-                        <li><a  href="login.html">Login</a></li>
-                        <li><a  href="lock_screen.html">Lock Screen</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;" >
-                        <i class="fa fa-tasks"></i>
-                        <span>Forms</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a  href="form_component.html">Form Components</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;" >
-                        <i class="fa fa-th"></i>
-                        <span>Data Tables</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a  href="basic_table.html">Basic Table</a></li>
-                        <li><a  href="responsive_table.html">Responsive Table</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;" >
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a  href="morris.html">Morris</a></li>
-                        <li><a  href="chartjs.html">Chartjs</a></li>
-                    </ul>
-                </li>
-
-            </ul>#}
+            </ul>
             <!-- sidebar menu end-->
         </div>
     </aside>
