--- a/src/FrontBundle/Resources/views/front_layout.html.twig
+++ b/src/FrontBundle/Resources/views/front_layout.html.twig
@@ -1,14 +1,118 @@
-{% extends '::base.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="Dashboard">
+    <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
 
-{% block body %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="btn btn-success pull-right" id="voirDetailPanier">Voir panier</div>
+    <title>{% block title %}BackOffice{% endblock %}</title>
+    {% block stylesheets %}
+        <!-- Bootstrap core CSS -->
+        <link href="{{ asset('bundles/app/dashgum/css/bootstrap.css') }}" rel="stylesheet">
+        <!--external css-->
+        <link href="{{ asset('bundles/app/dashgum/font-awesome/css/font-awesome.css') }}" rel="stylesheet" />
+
+        <!-- Custom styles for this template -->
+        <link href="{{ asset('bundles/app/dashgum/css/style.css')}} " rel="stylesheet">
+        <link href="{{ asset('bundles/app/dashgum/css/style-responsive.css') }}" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/datatables/jquery.dataTables.min.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/bootstrap/css/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/app/datepicker/datepicker3.css') }}"/>
+    {% endblock %}
+</head>
+
+<body>
+
+<section id="container" >
+    <!-- **********************************************************************************************************************************************************
+    TOP BAR CONTENT & NOTIFICATIONS
+    *********************************************************************************************************************************************************** -->
+    <!--header start-->
+    <header class="header black-bg">
+        {#<div class="sidebar-toggle-box">
+            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+        </div>#}
+        <!--logo start-->
+        <a href="{{ path('_challenge_front_produit_list') }}" class="logo"><b>Challenge</b></a>
+        <!--logo end-->
+        <div class="top-menu">
+            {% if (app.user is null) %}
+                <ul class="nav pull-right top-menu" style="margin-top: 15px">
+                    <li><a class="btn" href="{{ path('fos_user_security_login') }}">Connectez-vous</a></li>
+                </ul>
+            {% else %}
+                <ul class="nav pull-right top-menu" style="margin-top: 15px">
+                    <li><a class="btn btn-success" href="{{ path('_challenge_front_voir_panier') }}"><i class="fa fa-shopping-cart"></i> Voir panier</a></li>
+                    <li><a class="btn btn-warning" href="{{ path('_challenge_produit_list') }}">Administration</a></li>
+                    <li><a class="btn" href="{{ path('fos_user_security_logout') }}">Déconnexion ({{ app.user.nom }})</a></li>
+                </ul>
+            {% endif %}
         </div>
-    </div>
-{% endblock %}
+    </header>
+    <!--header end-->
 
+    <!-- **********************************************************************************************************************************************************
+    MAIN CONTENT
+    *********************************************************************************************************************************************************** -->
+    <!--main content start-->
+    <section>
+        <section class="wrapper site-min-height">
+            {% for flashMessage in app.session.flashbag.get('error') %}
+                <div class="alert alert-danger alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    {{ flashMessage }}
+                </div>
+            {% endfor %}
+
+            {% for flashMessage in app.session.flashbag.get('success') %}
+                <div class="alert alert-success alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                    {{ flashMessage }}
+                </div>
+            {% endfor %}
+            {% block body %}
+                {#<h3><i class="fa fa-angle-right"></i> Blank Page</h3>
+                <div class="row mt">
+                    <div class="col-lg-12">
+                        <p>Place your content here.</p>
+                    </div>
+                </div>#}
+            {% endblock %}
+        </section>
+    </section><!-- /MAIN CONTENT -->
+
+    <!--main content end-->
+</section>
 {% block javascripts %}
-    {{ parent() }}
+    <!-- js placed at the end of the document so the pages load faster -->
+    <script src="{{ asset('bundles/app/dashgum/js/jquery.js') }}"></script>
+    <script src="{{ asset('bundles/app/dashgum/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/dashgum/js/jquery-ui-1.9.2.custom.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/dashgum/js/jquery.ui.touch-punch.min.js') }}"></script>
+    <script class="include" type="text/javascript" src="{{ asset('bundles/app/dashgum/js/jquery.dcjqaccordion.2.7.js') }}"></script>
+    <script src="{{ asset('bundles/app/dashgum/js/jquery.scrollTo.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/dashgum/js/jquery.nicescroll.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
+    <script src="{{ asset('bundles/app/datepicker/bootstrap-datepicker.js') }}"></script>
+    <script src="{{ asset('bundles/app/datepicker/locales/bootstrap-datepicker.fr.js') }}"></script>
+    <script src="{{ asset('bundles/app/datatables/jquery.dataTables.min.js') }}"></script>
+
+    <!--common script for all pages-->
+    <script src="{{ asset('bundles/app/dashgum/js/common-scripts.js') }}"></script>
     <script src="{{ asset('bundles/front/js/front.js') }}"></script>
+    <!--script for this page-->
 {% endblock %}
+{#<script>
+    //custom select box
+
+    $(function(){
+        $('select.styled').customSelect();
+    });
+
+</script>#}
+
+</body>
+</html>
